::before bg image not woorking

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <button class="btn">My CB</button>
       </div>
     </section>
-    <h1 class="h-primary center">Experience</h1>
+
+    <!-- ---------------------------------------------------section3 -->
+    <h1 class="h-primary center h-down">Experience</h1>
     <section class="section" id="section3">
       <div class="half-sec">
         <div class="box">
