--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
         </div>
       </div>
     </section>
+    <footer class="center">@copy all right received by programing hero</footer>
   </body>
 </html>
