--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="btn">HEAR ME</button>
       </div>
       <div class="half-sec">
-        <img src="/img/section1.png" alt="" />
+        <img src="./img/section1.png" alt="" />
       </div>
     </section>
 
@@ -29,7 +29,7 @@
 
     <section class="section" id="section2">
       <div class="half-sec">
-        <img src="/img/section2.png" alt="" />
+        <img src="./img/section2.png" alt="" />
       </div>
 
       <div class="half-sec">
